--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -9,7 +9,7 @@
         android:label="MainFragment" >
         <action
             android:id="@+id/action_mainFragment_to_secondFragment"
-            app:destination="@id/navigation5"
+            app:destination="@id/secondFragment"
             app:enterAnim="@anim/slide_in_right"
             app:exitAnim="@anim/slide_out_left"
             app:popEnterAnim="@anim/slide_in_left"
@@ -30,6 +30,23 @@
             app:popExitAnim="@anim/slide_out_bottom"/>
     </fragment>
     <fragment
+        android:id="@+id/secondFragment"
+        android:name="mousquetaires.com.navigation4techday.ui.main.SecondFragment"
+        android:label="SecondFragment" >
+        <argument
+            android:name="origin" />
+        <action
+            android:id="@+id/action_secondFragment_to_sixthFragment"
+            app:destination="@id/sixthFragment"
+            app:enterAnim="@anim/slide_in_right"
+            app:exitAnim="@anim/slide_out_left"
+            app:popEnterAnim="@anim/slide_in_left"
+            app:popExitAnim="@anim/slide_out_right"/>
+        <deepLink
+            android:id="@+id/deepLink"
+            app:uri="http://navigation4techday/2" />
+    </fragment>
+    <fragment
         android:id="@+id/thirdFragment"
         android:name="mousquetaires.com.navigation4techday.ui.main.ThirdFragment"
         android:label="ThirdFragment" >
@@ -37,7 +54,21 @@
             android:name="origin" />
         <action
             android:id="@+id/action_thirdFragment_to_sixthFragment"
-            app:destination="@id/navigation5"
+            app:destination="@id/sixthFragment"
+            app:enterAnim="@anim/slide_in_right"
+            app:exitAnim="@anim/slide_out_left"
+            app:popEnterAnim="@anim/slide_in_left"
+            app:popExitAnim="@anim/slide_out_right"/>
+    </fragment>
+    <fragment
+        android:id="@+id/sixthFragment"
+        android:name="mousquetaires.com.navigation4techday.ui.main.SixthFragment"
+        android:label="SixthFragment" >
+        <argument
+            android:name="origin" />
+        <action
+            android:id="@+id/action_sixthFragment_to_mainFragment"
+            app:destination="@id/mainFragment"
             app:enterAnim="@anim/slide_in_right"
             app:exitAnim="@anim/slide_out_left"
             app:popEnterAnim="@anim/slide_in_left"
@@ -66,7 +97,7 @@
             <argument android:name="origin" />
             <action
                 android:id="@+id/action_fifthFragment_to_sixthFragment"
-                app:destination="@id/navigation5"
+                app:destination="@id/sixthFragment"
                 app:enterAnim="@anim/slide_in_right"
                 app:exitAnim="@anim/slide_out_left"
                 app:popEnterAnim="@anim/slide_in_left"
@@ -74,39 +105,6 @@
             <deepLink
                 android:id="@+id/deepLink3"
                 app:uri="http://navigation4techdaytest2/{origin}" />
-        </fragment>
-    </navigation>
-    <navigation
-        android:id="@+id/navigation5"
-        app:startDestination="@id/secondFragment" >
-        <fragment
-            android:id="@+id/secondFragment"
-            android:name="mousquetaires.com.navigation4techday.ui.main.SecondFragment"
-            android:label="SecondFragment">
-            <argument android:name="origin" />
-            <action
-                android:id="@+id/action_secondFragment_to_sixthFragment"
-                app:destination="@id/sixthFragment"
-                app:enterAnim="@anim/slide_in_right"
-                app:exitAnim="@anim/slide_out_left"
-                app:popEnterAnim="@anim/slide_in_left"
-                app:popExitAnim="@anim/slide_out_right" />
-        </fragment>
-        <fragment
-            android:id="@+id/sixthFragment"
-            android:name="mousquetaires.com.navigation4techday.ui.main.SixthFragment"
-            android:label="SixthFragment">
-            <argument android:name="origin" />
-            <action
-                android:id="@+id/action_sixthFragment_to_mainFragment"
-                app:destination="@id/mainFragment"
-                app:enterAnim="@anim/slide_in_right"
-                app:exitAnim="@anim/slide_out_left"
-                app:popEnterAnim="@anim/slide_in_left"
-                app:popExitAnim="@anim/slide_out_right" />
-            <deepLink
-                android:id="@+id/deepLink2"
-                app:uri="http://navigation4techdaytest/{origin}" />
         </fragment>
     </navigation>
 </navigation>
